Fix scrollbar issue
Closes #35

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -6,6 +6,10 @@
   max-width: none;
 }
 
+.analyzeApiEUIPage {
+  flex-direction: column;
+}
+
 .analyzeApiTableHeaderCell {
   max-width: none;
   padding: 7px 8px 8px;
